2017-01-11  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed GTK buildfix after r210571.

        * PlatformGTK.cmake:

2017-01-10  Yusuke Suzuki  <utatane.tea@gmail.com>

        Implement JSSourceCode to propagate SourceCode in module pipeline
        https://bugs.webkit.org/show_bug.cgi?id=166861

        Reviewed by Saam Barati.

        Now SourceOrigin is correctly propagated through the module pipeline.
        So the error reported by http/tests/security/contentSecurityPolicy/module-eval-blocked-expected.html
        is updated.

        * ForwardingHeaders/runtime/JSSourceCode.h: Added.
        * bindings/js/JSDOMPromise.h:
        (WebCore::DeferredPromise::resolveWithCallback):
        * bindings/js/ScriptModuleLoader.cpp:
        (WebCore::ScriptModuleLoader::notifyFinished):

2017-01-10  Brent Fulgham  <bfulgham@apple.com>

        File scheme should not allow access of a resource on a different volume.
        https://bugs.webkit.org/show_bug.cgi?id=158552
        <rdar://problem/15307582>

        Reviewed by Alex Christensen.

        Revise SecurityOrigin to prevent files from one storage device (volume) from accessing content
        on a different storage device (volume) unless universal access is enabled.

        Pass the current file device as part of the NSURLRequest so that CFNetwork can reject loads
        where the device changes in the midst of a load.

        Also properly reflect that SecurityOrigin is never null by passing as a reference,
        rather than as a pointer.

        Tests: Tools/TestWebKitAPI/Tests/mac/CrossPartitionFileSchemeAccess.mm

        * page/SecurityOrigin.cpp:
        (WebCore::SecurityOrigin::canAccess): Pass argument as reference.
        (WebCore::SecurityOrigin::passesFileCheck): Add check that file URLs refer to files in
        the same storage volume.
        (WebCore::SecurityOrigin::canDisplay): Add check that files share the same volume.